sorta fixed menu shrinking on mobile

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1321,6 +1321,12 @@ blockquote {
 
 	.dropdown {
 		margin: 0;
+		padding: 0;
+
+		a {
+			margin: 0;
+			padding: 0;
+		}
 	}
 
 	.dropdown-content {
